# dvm-firmware

./: .clang-tidy  CMakeLists.txt  README.md
UserApplication/: UserApplication.sln
UserApplication/UserApplication/: MainWindow.xaml  MainWindow.xaml.cs
include/: AD7177.h  AD7177Define.h  DigitalVoltmeter.h  ShiftRegister.h  UART.h
src/: AD7177.cpp  Communication.cpp  DigitalVoltmeter.cpp  ShiftRegister.cpp  UART.cpp  main.cpp
